Ajustado alguns campos
